feat: simple scripting

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "bitcoin-core": "^5.0.0"
+    "bitcoin-core": "^5.0.0",
+    "bitcoinjs-lib": "^6.1.7",
+    "ecpair": "^3.0.0",
+    "tiny-secp256k1": "^2.2.3"
   }
 }
